# osgTransparency

./: .gitignore  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md
CMake/: CPackConfig.cmake  CPackReadme.txt  FindExtrae.cmake  FindOsgGL3.cmake
doc/: Changelog.md  RelNotes.template  Tutorial.md
examples/: CMakeLists.txt  example.cpp
osgTransparency/: BaseParameters.cpp  BaseParameters.h  BaseRenderBin.cpp  BaseRenderBin.h  CMakeLists.txt  DepthPeelingBin.cpp  DepthPeelingBin.h  FragmentListOITBin.cpp  FragmentListOITBin.h  MultiLayerDepthPeelingBin.cpp  MultiLayerDepthPeelingBin.h  MultiLayerParameters.h  OcclusionQueryGroup.cpp  OcclusionQueryGroup.h  TextureBuffer.cpp  TextureBuffer.h  files.cmake  types.h
osgTransparency/multilayer/: Canvas.cpp  Canvas.h  Context.cpp  Context.h  DepthPartitioner.cpp  DepthPartitioner.h  DepthPeelingBin.cpp  DepthPeelingBin.h  GL3IterativeDepthPartitioner.cpp  GL3IterativeDepthPartitioner.h  IterativeDepthPartitioner.cpp  IterativeDepthPartitioner.h  Parameters.cpp
osgTransparency/shaders/GL2/multilayer/: blend.frag  final_pass.frag  first_pass.frag  peel.frag
osgTransparency/shaders/GL2/multilayer/depth_partition/: check_partition.frag  profile.frag
osgTransparency/shaders/GL2/multilayer/depth_partition/iterative/: alpha_adjusted_first_find_quantiles_interval.frag  count_iteration.frag  final_reprojection.frag  find_interval.frag  find_quantiles_interval.frag  first_count.frag  first_count_with_alpha.frag  first_find_quantiles_interval.frag  minmax.frag
osgTransparency/shaders/GL2/simple/: peel.frag
osgTransparency/shaders/GL3/fragment_list/: fragment_count_filtering.frag  save_fragments.frag  sort_and_display.frag
osgTransparency/shaders/GL3/multilayer/: final_pass.frag  first_pass.frag  peel.frag
osgTransparency/shaders/GL3/multilayer/depth_partition/: check_partition.frag  profile.frag
osgTransparency/shaders/GL3/multilayer/depth_partition/iterative/: alpha_adjusted_first_find_quantiles_interval.frag  count_iteration.frag  final_reprojection.frag  find_interval.frag  find_quantiles_interval.frag  first_count.frag  first_find_quantiles_interval.frag  minmax.frag
osgTransparency/shaders/GL3/simple/: peel.frag
osgTransparency/util/: GPUTimer.cpp  GPUTimer.h  ShapeData.h  Stats.h  TextureDebugger.cpp  TextureDebugger.h  constants.cpp  constants.h  extensions.h  glerrors.cpp  glerrors.h  helpers.cpp  helpers.h  loaders.cpp  loaders.h  paths.in.h  strings_array.h  trace.cpp  trace.h
tests/: CMakeLists.txt  test_graphics_context.cpp
tests/unit/: BaseRenderBin.cpp  RenderContext.cpp  RenderContext.h  compare.cpp  compare.h  util.cpp  util.h
tests/unit/shaders/GL2/: main.frag  main.vert  stretch.vert  trivial.frag  trivial.vert
